@@ -37,104 +37,20 @@
 
 #include <jabberdlib.h>
 
+namespace xmppd {
+    xmppd::xhash::iterator xhash::get_by_domain(std::string domainkey) {
+	while (true) {
+	    xmppd::xhash::iterator result = find(domainkey);
+	    if (result != end())
+		return result;
 
-/**
- * Generates a hash code for a string.
- * 
- * This function uses the ELF hashing algorithm as reprinted in 
- * Andrew Binstock, "Hashing Rehashed," Dr. Dobb's Journal, April 1996.
- *
- * @param s the string to hash
- * @return the hash value
- */
-int _xhasher(const char *s) {
-    /* ELF hash uses unsigned chars and unsigned arithmetic for portability */
-    const unsigned char *name = (const unsigned char *)s;
-    unsigned long h = 0, g;
+	    std::string::size_type dot_pos = domainkey.find(".");
+	    if (dot_pos == std::string::npos)
+		return find("*");
 
-    while (*name) {
-	/* do some fancy bitwanking on the string */
-        h = (h << 4) + (unsigned long)(*name++);
-        if ((g = (h & 0xF0000000UL))!=0)
-            h ^= (g >> 24);
-        h &= ~g;
-
+	    domainkey.erase(0, dot_pos+1);
+	}
     }
-
-    return (int)h;
-}
-
-/**
- * insert a new 'node' in the xhash
- *
- * @param h the xhash where to insert the new node
- * @param index to which index the node should be inserted
- * @return the newly created node
- */
-xhn _xhash_node_new(xht h, int index) {
-    xhn n;
-    int i = index % h->prime;
-
-    /* get existing empty one */
-    for(n = h->zen[i]; n != NULL; n = n->next)
-        if(n->key == NULL)	/* should not happen anymore, we are now removing unused nodes */
-            return n;
-
-    /* overflowing, new one! */
-    n = new _xhn;	/* XXX dangerous not to use a memory pool, but current pools don't allow to free memory! */
-    bzero(n, sizeof(_xhn));
-    n->next = h->zen[i];
-    h->zen[i] = n;
-    return n;
-}
-
-/**
- * get the node for a given key out of the xhash
- *
- * @param h the xhash to get the node from
- * @param key which key to get
- * @param index the index for the key
- * @return the node for the key, NULL if no such node
- */
-xhn _xhash_node_get(xht h, const char *key, int index) {
-    xhn n;
-    int i = index % h->prime;
-    for(n = h->zen[i]; n != NULL; n = n->next)
-        if(j_strcmp(key, n->key) == 0)
-            return n;
-    return NULL;
-}
-
-/**
- * removes a single entry in an xhash (xhash_walker function)
- *
- * @param hash the hash to remove the entry from
- * @param key the key to remove
- * @param value ignored
- * @param arg ignored
- */
-static void _xhash_cleaner_walk(xht hash, const char *key, void *value, void *arg) {
-    if (hash == NULL || key == NULL)
-      return;
-
-    xhash_zap(hash, key);
-}
-
-/**
- * removes all entries in an xhash
- *
- * used as a pool_cleaner() function
- *
- * @param arg the xhash to clean
- */
-static void _xhash_cleaner(void *arg) {
-    xht h = (xht)arg;
-
-    /* sanity check */
-    if (h == NULL)
-      return;
-
-    xhash_walk(h, _xhash_cleaner_walk, NULL);
 }
 
 /**
@@ -143,21 +59,9 @@ static void _xhash_cleaner(void *arg) {
  * @param prime size of the hash (use a prime number!)
  * @return pointer to the new hash
  */
-xht xhash_new(int prime) {
-    xht xnew;
-    pool p;
-
-/*    log_debug(ZONE,"creating new hash table of size %d",prime); */
-
-    p = pool_heap(sizeof(_xhn)*prime + sizeof(_xht));
-    xnew = static_cast<xht>(pmalloco(p, sizeof(_xht)));
-    xnew->prime = prime;
-    xnew->p = p;
-    xnew->zen = static_cast<xhn_struct**>(pmalloco(p, sizeof(xhn)*prime)); /* array of xhn size of prime */
-    pool_cleanup(p, _xhash_cleaner, (void*)xnew);
-    return xnew;
+xht xhash_new(int prima) {
+    return new xmppd::xhash();
 }
-
 
 /**
  * put an entry in the xhash
@@ -167,30 +71,13 @@ xht xhash_new(int prime) {
  * @param val the value, that should be entered
  */
 void xhash_put(xht h, const char *key, void *val) {
-    int index;
-    xhn n;
-
-    if(h == NULL || key == NULL)
-        return;
-
-    index = _xhasher(key);
-
-    /* if existing key, replace it */
-    if((n = _xhash_node_get(h, key, index)) != NULL)
-    {
-/*        log_debug(ZONE,"replacing %s with new val %X",key,val); */
-
-        n->key = key;
-        n->val = val;
-        return;
+    // sanity checks
+    if (h == NULL || key == NULL) {
+	return;
     }
 
-/*    log_debug(ZONE,"saving %s val %X",key,val); */
-
-    /* new node */
-    n = _xhash_node_new(h, index);
-    n->key = key;
-    n->val = val;
+    // insert the element
+    (*h)[key] = val;
 }
 
 /**
@@ -200,17 +87,22 @@ void xhash_put(xht h, const char *key, void *val) {
  * @param key which value to get
  * @return pointer to the value, NULL if no such key
  */
-void *xhash_get(xht h, const char *key) {
-    xhn n;
-
-    if(h == NULL || key == NULL || (n = _xhash_node_get(h, key, _xhasher(key))) == NULL)
-    {
-/*        log_debug(ZONE,"failed lookup of %s",key); */
-        return NULL;
+void* xhash_get(xht h, const char *key) {
+    // sanity checks
+    if (h == NULL || key == NULL) {
+	return NULL;
     }
 
-/*    log_debug(ZONE,"found %s returning %X",key,n->val); */
-    return n->val;
+    // check if the element exists
+    xmppd::xhash::iterator i = h->find(key);
+
+    // element does not exist?
+    if (i == h->end()) {
+	return NULL;
+    }
+
+    // it exists, return it
+    return i->second;
 }
 
 /**
@@ -229,25 +121,21 @@ void *xhash_get(xht h, const char *key) {
  * @param domain the domain which should be used as the key
  */
 void *xhash_get_by_domain(xht h, const char *domain) {
-    const char* next_token = domain;
-
-    while (next_token != NULL) {
-        /* is there a setting for this level of subdomains? */
-        void *result = xhash_get(h, next_token);
-
-        if (result != NULL) {
-            return result;
-        }
-
-        /* skip one level of subdomains */
-        next_token = strstr(next_token, ".");
-        if (next_token != NULL) {
-            next_token++;
-        }
+    // sanity checks
+    if (h == NULL || domain == NULL) {
+	return NULL;
     }
 
-    /* nothing found: return the default, or NULL */
-    return xhash_get(h, "*");
+    // check if the element exists
+    xmppd::xhash::iterator i = h->get_by_domain(domain);
+
+    // element does not exist?
+    if (i == h->end()) {
+	return NULL;
+    }
+
+    // it exists, return it
+    return i->second;
 }
 
 /**
@@ -257,34 +145,13 @@ void *xhash_get_by_domain(xht h, const char *domain) {
  * @param key the key of the value, that should be removed
  */
 void xhash_zap(xht h, const char *key) {
-    xhn n = NULL;
-    xhn previous_node = NULL;
-    int index = 0;
-
-    if(h == NULL || key == NULL)
-          return;
-
-    index = _xhasher(key) % h->prime;
-
-    for (n = h->zen[index]; n != NULL; n = n->next) {
-        if (n->key != NULL && strcmp(key, n->key) == 0) {
-            /* found entry */
-
-            /* remove entry */
-            if (previous_node == NULL) {
-                /* first entry for this index */
-                h->zen[index] = n->next;
-            } else {
-                previous_node->next = n->next;
-            }
-            delete n;
-
-            /* entry removed, we can return */
-            return;
-        }
-
-        previous_node = n;
+    // sanity check
+    if (h == NULL || key == NULL) {
+	return;
     }
+
+    // erase the element from the hashtable
+    h->erase(key);
 }
 
 /**
@@ -293,10 +160,13 @@ void xhash_zap(xht h, const char *key) {
  * @param h the xhash to free
  */
 void xhash_free(xht h) {
-/*    log_debug(ZONE,"hash free %X",h); */
+    // sanity check
+    if (h == NULL) {
+	return;
+    }
 
-    if(h != NULL)
-        pool_free(h->p);
+    // free the instance
+    delete h;
 }
 
 /**
@@ -307,21 +177,15 @@ void xhash_free(xht h) {
  * @param arg what to pass to the optional argument of the xhash_walker function
  */
 void xhash_walk(xht h, xhash_walker w, void *arg) {
-    int i;
-    xhn n;
-    xhn next;
+    // sanity checks
+    if (h == NULL || w == NULL) {
+	return;
+    }
 
-    if(h == NULL || w == NULL)
-        return;
-
-/*    log_debug(ZONE,"walking %X",h); */
-
-    for(i = 0; i < h->prime; i++) {
-        for(n = h->zen[i]; n != NULL; n = next) {
-	    next = n->next; /* n might get freed in the xhash_walk ... */
-            if(n->key != NULL && n->val != NULL)
-                (*w)(h, n->key, n->val, arg);
-	}
+    // iterate the elements
+    xmppd::xhash::iterator p;
+    for (p = h->begin(); p != h->end(); ++p) {
+	(*w)(h, p->first.c_str(), p->second, arg);
     }
 }
 
@@ -366,8 +230,6 @@ xmlnode xhash_to_xml(xht h) {
 
     /* create root node */
     result = xmlnode_new_tag_ns("hash", NULL, NS_JABBERD_HASH);
-    snprintf(prime, sizeof(prime), "%i", h->prime);
-    xmlnode_put_attrib_ns(result, "prime", NULL, NULL, prime);
 
     /* insert entries */
     xhash_walk(h, _xhash_to_xml_walker, result);
@@ -383,7 +245,7 @@ xmlnode xhash_to_xml(xht h) {
  * @param hash the xhash in xml notation
  * @return xhash that has been created
  */
-xht xhash_from_xml(xmlnode hash) {
+xht xhash_from_xml(xmlnode hash, pool p) {
     xht result = NULL;
     xht ns = NULL;
     xmlnode_list_item entry = NULL;
@@ -408,7 +270,7 @@ xht xhash_from_xml(xmlnode hash) {
 	if (key == NULL)
 	    key = "";
 
-	xhash_put(result, pstrdup(result->p, key), pstrdup(result->p, value));
+	xhash_put(result, key, pstrdup(p, value));
     }
 
     pool_free(temp_p);
